# JNI

./: README.md
CppNative/: CMakeLists.txt  JNative.cpp
JavaNative/src/: JNative.h  JNative.java
